--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -576,25 +577,25 @@
             <div class="service-item">
                 <img src="https://i.postimg.cc/fy2R81n3/promo-poster.jpg" alt="Promo Poster">
                 <h3>Promo Poster</h3>
-                <p class="price"><strong>R300</strong></p>
+                <p class="price"><strong></strong></p>
                 <p class="description">Promo posters play a pivotal role in capturing your audience's attention and conveying your message in a visually compelling way. At EDigital Solutions, we understand the importance of a well-designed poster in your marketing strategy. Our team of talented designers creates promotional posters that are not only eye-catching but also strategically crafted to communicate your message effectively. Whether you're promoting an event, launching a product, or announcing a special offer, our posters are designed to make a lasting impression and drive engagement.</p>
             </div>
             <div class="service-item">
                 <img src="https://i.postimg.cc/K8dRSXKB/logo.jpg" alt="Logo Design">
                 <h3>Logo Design</h3>
-                <p class="price"><strong>R300</strong></p>
+                <p class="price"><strong></strong></p>
                 <p class="description">A logo is the visual cornerstone of your brand identity. It is the first impression your audience has of your business, and it needs to be memorable and meaningful. Our logo design service is dedicated to creating unique and professional logos that truly represent your brand's essence. We take the time to understand your business values, target audience, and vision to craft a logo that stands out in the crowded marketplace. A well-designed logo can significantly impact your brand recognition, and we're here to help you achieve that.</p>
             </div>
             <div class="service-item">
                 <img src="https://i.postimg.cc/sfwxfGQV/exspress-video.jpg" alt="Express Video">
                 <h3>Express Video</h3>
-                <p class="price"><strong>R500</strong></p>
+                <p class="price"><strong></strong></p>
                 <p class="description">In the digital age, video content is one of the most powerful tools for engaging with your audience. Our express video service is designed to deliver high-quality videos that captivate, inform, and inspire. Whether you need a promotional video, an explainer video, or a social media clip, we have the skills and creativity to bring your ideas to life. Our videos are tailored to convey your message effectively and resonate with your audience, helping you to build a stronger connection and drive more engagement.</p>
             </div>
             <div class="service-item">
                 <img src="https://i.postimg.cc/6q5QLtSJ/website.jpg" alt="Custom Website Design">
                 <h3>Custom Website Design</h3>
-                <p class="price"><strong>R2000</strong></p>
+                <p class="price"><strong></strong></p>
                 <p class="description">Your website is often the first point of contact potential customers have with your business. A well-designed website not only enhances your brand's credibility but also provides a seamless user experience. At EDigital Solutions, we specialize in creating custom websites that are tailored to your specific needs. Our designs are responsive, visually appealing, and optimized for performance. We take a comprehensive approach, considering everything from design aesthetics to functionality and search engine optimization (SEO). Our goal is to provide you with a website that not only looks great but also drives traffic and converts visitors into customers.</p>
             </div>
         </div>
@@ -637,7 +638,7 @@
         <div class="info">
             <p>Ready to elevate your business? Partner with EDigital Solutions for bespoke digital services that drive powerful results. Whether you're looking to revamp your brand with a new logo, engage your audience with captivating videos, or build a robust online presence with a custom website, we are here to help.</p>
             <p><strong>Phone:</strong> +27 82 798 3974</p>
-            <p><strong>Email:</strong> <a href="mailto:ewaldpret6@gmail.com" class="email">ewaldpret6@gmail.com</a></p>
+            <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection#214456404d45515344551761464c40484d0f424e4c" class="email"><span class="__cf_email__" data-cfemail="711406101d15010314054731161c10181d5f121e1c">[email&#160;protected]</span></a></p>
         </div>
         <a href="https://wa.me/27827983974" class="button">WHATSAPP US NOW</a>
     </section>
@@ -650,7 +651,7 @@
     </footer>
 
     <!-- Optional JavaScript for Mobile Navigation Toggle -->
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         $(document).ready(function(){
             // Toggle navigation on mobile
             $('.menu-toggle').click(function(){
