--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         <div class="info">
             <p>Ready to elevate your business? Partner with EDigital Solutions for bespoke digital services that drive powerful results. Whether you're looking to revamp your brand with a new logo, engage your audience with captivating videos, or build a robust online presence with a custom website, we are here to help.</p>
             <p><strong>Phone:</strong> +27 82 798 3974</p>
-            <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-ewaldpret6@gmail.com" class="email"><span class="__cf_email__" data-cfemail="711406101d15010314054731161c10181d5f121e1c">[email&#160;protected]</span></a></p>
+            <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-ewaldpret6@gmail.com" class="email"><span class="__cf_email__" data-cfemail="711406101d15010314054731161c10181d5f121e1c">ewaldpret6@gmail.com</span></a></p>
         </div>
         <a href="https://wa.me/27827983974" class="button">WHATSAPP US NOW</a>
     </section>
