--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- CSS Styles -->
     <style>
-        /* Global Styles */
         * {
             box-sizing: border-box;
             margin: 0;
@@ -85,7 +84,6 @@
             color: #00aaff;
         }
 
-        /* Mobile Navigation Toggle */
         .menu-toggle {
             display: none;
             position: absolute;
@@ -110,7 +108,6 @@
             justify-content: center;
             flex-direction: column;
             padding: 0 20px;
-            box-sizing: border-box;
             animation: fadeInHeader 2s ease-in-out;
         }
         header::after {
@@ -167,7 +164,6 @@
             backdrop-filter: blur(5px);
         }
 
-        /* Scroll Down Indicator */
         .scroll-down {
             position: absolute;
             bottom: 20px;
@@ -227,11 +223,7 @@
             position: relative;
             overflow: hidden;
         }
-        .services h2, .services p {
-            position: relative;
-            z-index: 1;
-        }
-        .service-items {
+        .services .service-items {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
@@ -288,11 +280,7 @@
             position: relative;
             overflow: hidden;
         }
-        .why-choose-us h2, .why-choose-us .points {
-            position: relative;
-            z-index: 1;
-        }
-        .points {
+        .why-choose-us .points {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -369,142 +357,6 @@
             background-color: #008ecc;
             transform: translateY(-3px);
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-        }
-
-        /* Reviews Section */
-        .reviews {
-            background: #f9fafb;
-            padding: 80px 20px;
-        }
-        .reviews h2 {
-            margin-bottom: 40px;
-        }
-        .reviews .review-form {
-            max-width: 600px;
-            margin: 0 auto 40px auto;
-            text-align: left;
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.05);
-        }
-        .reviews .review-form label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 600;
-        }
-        .reviews .review-form input[type="text"],
-        .reviews .review-form input[type="email"],
-        .reviews .review-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        .reviews .star-rating {
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: flex-start;
-            margin-bottom: 20px;
-        }
-        .reviews .star-rating input {
-            display: none;
-        }
-        .reviews .star-rating label {
-            font-size: 30px;
-            color: #ccc;
-            cursor: pointer;
-            margin: 0 5px;
-        }
-        .reviews .star-rating input:checked ~ label {
-            color: #ffa500;
-        }
-        .reviews .filter-container {
-            margin-bottom: 40px;
-            text-align: center;
-        }
-        .reviews .filter-container select {
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        .reviews .review-list {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: left;
-        }
-        .reviews .review-item {
-            background: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-        }
-        .reviews .review-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .reviews .review-header .review-name {
-            font-weight: 600;
-            font-size: 16px;
-        }
-        .reviews .review-header .review-rating {
-            color: #ffa500;
-            font-size: 16px;
-        }
-        .reviews .review-comment {
-            margin-bottom: 10px;
-            font-size: 16px;
-            color: #555;
-        }
-        .reviews .review-replies {
-            margin-left: 20px;
-            margin-top: 20px;
-        }
-        .reviews .reply-form {
-            display: none;
-            margin-top: 20px;
-        }
-        .reviews .reply-form.show {
-            display: block;
-        }
-        .reviews .reply-form input[type="text"],
-        .reviews .reply-form input[type="email"],
-        .reviews .reply-form textarea {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-        }
-        .reviews .reply-button, .reviews .submit-reply {
-            display: inline-block;
-            padding: 8px 15px;
-            background: #00aaff;
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-            margin-right: 10px;
-            text-decoration: none;
-        }
-        .reviews .reply-button:hover,
-        .reviews .submit-reply:hover {
-            background: #008ecc;
-        }
-
-        .reviews .reply-item {
-            background: #f0f0f0;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-        .reviews .reply-header {
-            font-weight: 600;
-            margin-bottom: 5px;
         }
 
         /* Footer Styles */
@@ -655,8 +507,6 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#why-choose-us">Why Choose Us</a></li>
             <li><a href="#contact">Contact</a></li>
-            <!-- New link to Reviews -->
-            <li><a href="#reviews">Reviews</a></li>
         </ul>
     </nav>
 
@@ -667,8 +517,8 @@
                 <img src="https://i.postimg.cc/pXL9KJbh/website-logo.jpg" alt="Logo">
             </div>
             <h1>EDIGITAL SOLUTIONS</h1>
-            <h2>Promo Poster | Logo Design | Express Video | Custom Website Design</h2>
-            <p>Welcome to EDigital Solutions! We are your trusted partner in bringing your digital aspirations to life. Our mission is to deliver creative, high-quality, and results-driven digital services tailored to your unique business needs. Whether you are a startup looking to establish your brand or an established enterprise aiming to enhance your digital presence, we have the expertise and passion to make it happen.</p>
+            <h2>Promo Posters | Logo Design | Express Video | Custom Website Design</h2>
+            <p>Welcome to EDigital Solutions, your trusted partner in bringing digital aspirations to life. Our mission is to deliver creative, high-quality, and results-driven digital services tailored to your unique business needs. Whether you are a startup looking to establish your brand or an established enterprise aiming to enhance your digital presence, we have the expertise to help you achieve your goals.</p>
         </div>
         <div class="scroll-down">
             <img src="https://img.icons8.com/ios-filled/50/ffffff/expand-arrow--v1.png" alt="Scroll Down" onclick="document.querySelector('#services').scrollIntoView({ behavior: 'smooth' });">
@@ -678,33 +528,32 @@
     <!-- Services Section -->
     <section class="services" id="services">
         <h2>Our Services</h2>
-        <p>We offer a comprehensive suite of digital solutions tailored to meet your unique business needs. Our team of experts is dedicated to providing high-quality services that drive results and exceed expectations.</p>
+        <p>We offer a comprehensive suite of digital solutions tailored to your business. Our dedicated experts focus on delivering high-quality work that drives meaningful results. From eye-catching promo posters to custom website designs, our services are designed to elevate your brand and online presence.</p>
         <div class="service-items">
             <div class="service-item">
                 <img src="https://i.postimg.cc/fy2R81n3/promo-poster.jpg" alt="Promo Poster">
-                <h3>Promo Poster</h3>
-                <p class="description">Promo posters play a pivotal role in capturing your audience's attention and conveying your message in a visually compelling way. At EDigital Solutions, we understand the importance of a well-designed poster in your marketing strategy. Our team of talented designers creates promotional posters that are not only eye-catching but also strategically crafted to communicate your message effectively.</p>
+                <h3>Promo Posters</h3>
+                <p class="description">Capture your audience’s attention with professionally designed promotional posters. Whether for events, product launches, or special offers, our team crafts posters that make a lasting impact and align seamlessly with your brand messaging.</p>
             </div>
             <div class="service-item">
                 <img src="https://i.postimg.cc/K8dRSXKB/logo.jpg" alt="Logo Design">
                 <h3>Logo Design</h3>
-                <p class="description">A logo is the visual cornerstone of your brand identity. Our logo design service is dedicated to creating unique and professional logos that truly represent your brand's essence. We take the time to understand your business values, target audience, and vision to craft a logo that stands out in the crowded marketplace.</p>
+                <p class="description">Your logo is the visual cornerstone of your brand. We create distinctive, memorable logos that resonate with your values and appeal to your target audience—ensuring your brand stands out in a crowded marketplace.</p>
             </div>
             <div class="service-item">
                 <img src="https://i.postimg.cc/sfwxfGQV/exspress-video.jpg" alt="Express Video">
                 <h3>Express Video</h3>
-                <p class="description">Video content is one of the most powerful tools for engaging with your audience. Our express video service delivers high-quality videos that captivate, inform, and inspire. Whether you need a promotional video, an explainer video, or a social media clip, we have the skills and creativity to bring your ideas to life.</p>
+                <p class="description">Engaging video content can captivate audiences like no other medium. Our express video services deliver high-quality, impactful videos tailored to your message, helping you connect with your viewers and drive engagement.</p>
             </div>
             <div class="service-item">
                 <img src="https://i.postimg.cc/6q5QLtSJ/website.jpg" alt="Custom Website Design">
                 <h3>Custom Website Design</h3>
-                <p class="description">Your website is often the first point of contact potential customers have with your business. We specialize in creating custom websites that are responsive, visually appealing, and optimized for performance. We consider everything from design aesthetics to functionality and SEO to help you achieve a website that looks great and drives results.</p>
+                <p class="description">A compelling, user-friendly website is the heart of your digital presence. We design fully customized websites that are responsive, visually appealing, and optimized for performance—transforming visitors into loyal customers.</p>
             </div>
-            <!-- New Product: Web Hosting Server Management -->
             <div class="service-item">
                 <img src="https://i.postimg.cc/zXN3Fsr8/webhosting-sever.jpg" alt="Web Hosting Server Management">
                 <h3>Web Hosting Server Management</h3>
-                <p class="description">We handle all aspects of web hosting server management. From setup and configuration to maintenance and monitoring, we ensure your servers remain secure, optimized, and reliable. Focus on your core business while we take care of the technical side.</p>
+                <p class="description">Managing your web hosting environment can be complex. We handle all technical aspects—security, optimization, and maintenance—so you can focus on your core business, confident that your site is always running smoothly.</p>
             </div>
         </div>
     </section>
@@ -715,27 +564,27 @@
         <div class="points">
             <div class="why-point">
                 <h3>Tailored Solutions</h3>
-                <p>We deliver customized solutions aligned with your vision and objectives. Our client-focused approach ensures that we understand your needs and work to achieve your goals.</p>
+                <p>We recognize that every business is unique, so we provide customized solutions that match your goals and brand identity, ensuring genuine value and long-term success.</p>
             </div>
             <div class="why-point">
                 <h3>Experienced Team</h3>
-                <p>Our experts bring a wealth of experience and a passion for excellence. We stay on top of the latest trends and technologies to deliver outstanding results.</p>
+                <p>Our dedicated professionals bring years of industry experience and a passion for excellence, enabling us to deliver outstanding results on every project.</p>
             </div>
             <div class="why-point">
                 <h3>Quality and Value</h3>
-                <p>We provide high-quality services at competitive prices, delivering value that exceeds your expectations. Quality is our standard, not an option.</p>
+                <p>We focus on delivering top-notch quality at competitive rates. Our objective is to maximize your return on investment and help your business thrive in the digital landscape.</p>
             </div>
             <div class="why-point">
-                <h3>Customer Satisfaction</h3>
-                <p>Customer satisfaction is our top priority. We work closely with you, ensuring you’re delighted with the final product and experience.</p>
+                <h3>Customer-Centric Approach</h3>
+                <p>From the initial consultation to final delivery, we prioritize clear communication, responsiveness, and your satisfaction, ensuring a positive experience every step of the way.</p>
             </div>
             <div class="why-point">
                 <h3>Innovation and Creativity</h3>
-                <p>We embrace innovation and creativity to keep you ahead of the competition. Our solutions are cutting-edge, strategic, and effective.</p>
+                <p>We continuously explore fresh ideas, emerging trends, and innovative technologies, helping your brand stay ahead of the curve and stand out in an evolving market.</p>
             </div>
             <div class="why-point">
                 <h3>Proven Results</h3>
-                <p>We have a track record of successful projects across various industries. Our experience drives the results you need.</p>
+                <p>Our portfolio spans a diverse range of clients and industries, reflecting our ability to deliver real, measurable results that enhance brand visibility and growth.</p>
             </div>
         </div>
     </section>
@@ -744,56 +593,11 @@
     <section class="contact" id="contact">
         <h2>Get in Touch</h2>
         <div class="info">
-            <p>Ready to elevate your business? Partner with EDigital Solutions for bespoke digital services that drive powerful results. Whether you're looking to revamp your brand with a new logo, engage your audience with captivating videos, or build a robust online presence with a custom website, we are here to help.</p>
+            <p>Ready to take your digital presence to the next level? Partner with EDigital Solutions for bespoke digital services that yield tangible results. From brand creation to dynamic video content and robust web platforms, we’re here to transform your vision into reality.</p>
             <p><strong>Phone:</strong> +27 82 798 3974</p>
             <p><strong>Email:</strong> <a href="mailto:ewaldpret6@gmail.com" class="email">ewaldpret6@gmail.com</a></p>
         </div>
         <a href="https://wa.me/27827983974" class="button">WHATSAPP US NOW</a>
-    </section>
-
-    <!-- Reviews Section -->
-    <section class="reviews" id="reviews">
-        <h2>Ratings & Reviews</h2>
-        <p>Share your experience with EDigital Solutions! Leave a rating, comment, and browse what others have said.</p>
-
-        <div class="review-form">
-            <h3>Leave a Review</h3>
-            <form id="reviewForm">
-                <label for="reviewerName">Name</label>
-                <input type="text" id="reviewerName" name="reviewerName" required>
-
-                <label for="reviewerEmail">Email</label>
-                <input type="email" id="reviewerEmail" name="reviewerEmail" required>
-
-                <label>Rating</label>
-                <div class="star-rating">
-                    <input type="radio" id="star5" name="rating" value="5" required><label for="star5">&#9733;</label>
-                    <input type="radio" id="star4" name="rating" value="4"><label for="star4">&#9733;</label>
-                    <input type="radio" id="star3" name="rating" value="3"><label for="star3">&#9733;</label>
-                    <input type="radio" id="star2" name="rating" value="2"><label for="star2">&#9733;</label>
-                    <input type="radio" id="star1" name="rating" value="1"><label for="star1">&#9733;</label>
-                </div>
-
-                <label for="reviewComment">Comment</label>
-                <textarea id="reviewComment" name="reviewComment" rows="4" required></textarea>
-
-                <button type="submit" style="padding:10px 20px;background:#00aaff;color:#fff;border:none;border-radius:5px;cursor:pointer;">Submit Review</button>
-            </form>
-        </div>
-
-        <div class="filter-container">
-            <label for="filterRating">Filter by rating:</label>
-            <select id="filterRating">
-                <option value="all">All</option>
-                <option value="5">5 Stars</option>
-                <option value="4">4 Stars</option>
-                <option value="3">3 Stars</option>
-                <option value="2">2 Stars</option>
-                <option value="1">1 Star</option>
-            </select>
-        </div>
-
-        <div class="review-list" id="reviewList"></div>
     </section>
 
     <!-- Footer -->
@@ -804,7 +608,6 @@
         <p>&copy; 2024 EDigital Solutions. All rights reserved.</p>
     </footer>
 
-    <!-- Optional JavaScript for Mobile Navigation Toggle -->
     <script>
         $(document).ready(function(){
             // Toggle navigation on mobile
@@ -812,7 +615,7 @@
                 $('nav ul').toggleClass('active');
             });
 
-            // Smooth scroll for navigation links and close menu on click
+            // Smooth scroll and close menu on click
             $('nav ul li a').click(function(){
                 $('nav ul').removeClass('active');
             });
@@ -827,8 +630,5 @@
             });
         });
     </script>
-
-    <!-- Your custom JS file -->
-    <script src="scripts.js"></script>
 </body>
 </html>
