--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDigital Solutions</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="512x512" href="https://i.postimg.cc/zf2p1Fm9/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://i.pinimg.com/236x/f4/6a/67/f46a67e650888ab69335de4a06db8d8b.jpg">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
@@ -514,7 +514,7 @@
     <header id="header">
         <div class="content">
             <div class="logo-placeholder">
-                <img src="https://i.postimg.cc/pXL9KJbh/website-logo.jpg" alt="Logo">
+                <img src="https://i.pinimg.com/236x/f4/6a/67/f46a67e650888ab69335de4a06db8d8b.jpg" alt="Logo">
             </div>
             <h1>EDIGITAL SOLUTIONS</h1>
             <h2>Promo Posters | Logo Design | Express Video | Custom Website Design</h2>
