--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
     <header id="header">
         <div class="content">
             <div class="logo-placeholder">
-                <img src="https://i.pinimg.com/236x/f4/6a/67/f46a67e650888ab69335de4a06db8d8b.jpg" alt="Logo">
+                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/467243504_1279418483180669_7436290341884688865_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=YhhKaQAnd5YQ7kNvgHsVMcf&_nc_oc=AdjiJldVOo1g1wxfjoCVDvR_z1BgF0UcTv3FV6ogVKLFzrGXxK_k1vA2-cfLAXPubAo&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AjrZuIIYUrTfAHkcKdIWMI8&oh=00_AYBWk1TYVEYJL_lcFHUwBaYiTROsIX03rmHWW5vomYNTKQ&oe=67BD022F" alt="Logo">
             </div>
             <h1>EDIGITAL SOLUTIONS</h1>
             <h2>Promo Posters | Logo Design | Express Video | Custom Website Design</h2>
