--- a/index.html
+++ b/index.html
@@ -514,14 +514,14 @@
     <header id="header">
         <div class="content">
             <div class="logo-placeholder">
-                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/467243504_1279418483180669_7436290341884688865_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=YhhKaQAnd5YQ7kNvgHsVMcf&_nc_oc=AdjiJldVOo1g1wxfjoCVDvR_z1BgF0UcTv3FV6ogVKLFzrGXxK_k1vA2-cfLAXPubAo&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AjrZuIIYUrTfAHkcKdIWMI8&oh=00_AYBWk1TYVEYJL_lcFHUwBaYiTROsIX03rmHWW5vomYNTKQ&oe=67BD022F" alt="Logo">
+                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/472727970_122113300658635292_7853373447575386205_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=X4sqrvF7Zu4Q7kNvgHXZ7SH&_nc_oc=AdhT3Xbnq9RrH4lBOAgntQW5vDAojQ-L-_zCLBSDb7POMBCIHSSncOhnZNxXSdQfV84&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AXqqTckAw2UBLGKlwjGTFCg&oh=00_AYDpEA5X2LqCC-Hw5QlLPdaQIT8QkkH0ccG1ac4BBoMQgQ&oe=67BCF2DE" alt="Logo">
             </div>
             <h1>EDIGITAL SOLUTIONS</h1>
             <h2>Promo Posters | Logo Design | Express Video | Custom Website Design</h2>
             <p>Welcome to EDigital Solutions, your trusted partner in bringing digital aspirations to life. Our mission is to deliver creative, high-quality, and results-driven digital services tailored to your unique business needs. Whether you are a startup looking to establish your brand or an established enterprise aiming to enhance your digital presence, we have the expertise to help you achieve your goals.</p>
         </div>
         <div class="scroll-down">
-            <img src="https://img.icons8.com/ios-filled/50/ffffff/expand-arrow--v1.png" alt="Scroll Down" onclick="document.querySelector('#services').scrollIntoView({ behavior: 'smooth' });">
+            <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/467243504_1279418483180669_7436290341884688865_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=YhhKaQAnd5YQ7kNvgHsVMcf&_nc_oc=AdjiJldVOo1g1wxfjoCVDvR_z1BgF0UcTv3FV6ogVKLFzrGXxK_k1vA2-cfLAXPubAo&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AjrZuIIYUrTfAHkcKdIWMI8&oh=00_AYBWk1TYVEYJL_lcFHUwBaYiTROsIX03rmHWW5vomYNTKQ&oe=67BD022F" alt="Scroll Down" onclick="document.querySelector('#services').scrollIntoView({ behavior: 'smooth' });">
         </div>
     </header>
 
