--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             <p>Welcome to EDigital Solutions, your trusted partner in bringing digital aspirations to life. Our mission is to deliver creative, high-quality, and results-driven digital services tailored to your unique business needs. Whether you are a startup looking to establish your brand or an established enterprise aiming to enhance your digital presence, we have the expertise to help you achieve your goals.</p>
         </div>
         <div class="scroll-down">
-            <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/467243504_1279418483180669_7436290341884688865_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=YhhKaQAnd5YQ7kNvgHsVMcf&_nc_oc=AdjiJldVOo1g1wxfjoCVDvR_z1BgF0UcTv3FV6ogVKLFzrGXxK_k1vA2-cfLAXPubAo&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AjrZuIIYUrTfAHkcKdIWMI8&oh=00_AYBWk1TYVEYJL_lcFHUwBaYiTROsIX03rmHWW5vomYNTKQ&oe=67BD022F" alt="Scroll Down" onclick="document.querySelector('#services').scrollIntoView({ behavior: 'smooth' });">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/expand-arrow--v1.png" alt="Scroll Down" onclick="document.querySelector('#services').scrollIntoView({ behavior: 'smooth' });">
         </div>
     </header>
 
