--- a/index.html
+++ b/index.html
@@ -531,27 +531,27 @@
         <p>We offer a comprehensive suite of digital solutions tailored to your business. Our dedicated experts focus on delivering high-quality work that drives meaningful results. From eye-catching promo posters to custom website designs, our services are designed to elevate your brand and online presence.</p>
         <div class="service-items">
             <div class="service-item">
-                <img src="https://i.postimg.cc/fy2R81n3/promo-poster.jpg" alt="Promo Poster">
+                <img src="https://static.vecteezy.com/system/resources/previews/002/043/612/non_2x/special-offer-banner-sale-promotion-web-market-poster-file-vector.jpg" alt="Promo Poster">
                 <h3>Promo Posters</h3>
                 <p class="description">Capture your audience’s attention with professionally designed promotional posters. Whether for events, product launches, or special offers, our team crafts posters that make a lasting impact and align seamlessly with your brand messaging.</p>
             </div>
             <div class="service-item">
-                <img src="https://i.postimg.cc/K8dRSXKB/logo.jpg" alt="Logo Design">
+                <img src="https://cdn.pixabay.com/photo/2016/12/28/08/15/hummingbird-1935665_640.png" alt="Logo Design">
                 <h3>Logo Design</h3>
                 <p class="description">Your logo is the visual cornerstone of your brand. We create distinctive, memorable logos that resonate with your values and appeal to your target audience—ensuring your brand stands out in a crowded marketplace.</p>
             </div>
             <div class="service-item">
-                <img src="https://i.postimg.cc/sfwxfGQV/exspress-video.jpg" alt="Express Video">
+                <img src="https://d2oto3d7z6t29c.cloudfront.net/entries/transformed/08/7c/768726_5392f133b18842f9bef23e8c978047bc.jpeg" alt="Express Video">
                 <h3>Express Video</h3>
                 <p class="description">Engaging video content can captivate audiences like no other medium. Our express video services deliver high-quality, impactful videos tailored to your message, helping you connect with your viewers and drive engagement.</p>
             </div>
             <div class="service-item">
-                <img src="https://i.postimg.cc/6q5QLtSJ/website.jpg" alt="Custom Website Design">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1Nd6wsdUY-90xFAPePZk_EQS725NOilRDUg&s" alt="Custom Website Design">
                 <h3>Custom Website Design</h3>
                 <p class="description">A compelling, user-friendly website is the heart of your digital presence. We design fully customized websites that are responsive, visually appealing, and optimized for performance—transforming visitors into loyal customers.</p>
             </div>
             <div class="service-item">
-                <img src="https://i.postimg.cc/zXN3Fsr8/webhosting-sever.jpg" alt="Web Hosting Server Management">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGoytpOeDqbj16e0qVUFk_e6fXh9hAevRgWg&s" alt="Web Hosting Server Management">
                 <h3>Web Hosting Server Management</h3>
                 <p class="description">Managing your web hosting environment can be complex. We handle all technical aspects—security, optimization, and maintenance—so you can focus on your core business, confident that your site is always running smoothly.</p>
             </div>
