--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         header {
             position: relative;
             text-align: center;
-            background: url('https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/467243504_1279418483180669_7436290341884688865_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=YhhKaQAnd5YQ7kNvgHsVMcf&_nc_oc=AdjiJldVOo1g1wxfjoCVDvR_z1BgF0UcTv3FV6ogVKLFzrGXxK_k1vA2-cfLAXPubAo&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AjrZuIIYUrTfAHkcKdIWMI8&oh=00_AYBWk1TYVEYJL_lcFHUwBaYiTROsIX03rmHWW5vomYNTKQ&oe=67BD022F') no-repeat center center/cover;
+            background: url('https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/481067275_1354155989040251_818686325612014988_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=108&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=5gI8OeVR4TgQ7kNvgHnT4K7&_nc_oc=Adn0AuIE5X4r6OOWz0vse4e8jGK9K-VFyDXloSF4o4ATcWGvn1C3fkSxVldMKEqYKpg&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=fBCzbqCPJ7PR6VmRZVijFA&oh=00_AYFKGCzBEz7nbYJruzFFqqtiKi46KpcW-RIkLtSP_zPdvQ&oe=67E8B8DE') no-repeat center center/cover;
             background-size: cover;
             height: 100vh;
             color: #fff;
