--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
     <header id="header">
         <div class="content">
             <div class="logo-placeholder">
-                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/472727970_122113300658635292_7853373447575386205_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=X4sqrvF7Zu4Q7kNvgHXZ7SH&_nc_oc=AdhT3Xbnq9RrH4lBOAgntQW5vDAojQ-L-_zCLBSDb7POMBCIHSSncOhnZNxXSdQfV84&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AXqqTckAw2UBLGKlwjGTFCg&oh=00_AYDpEA5X2LqCC-Hw5QlLPdaQIT8QkkH0ccG1ac4BBoMQgQ&oe=67BCF2DE" alt="Logo">
+                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-1/472727970_122113300658635292_7853373447575386205_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=103&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=BMvVVatGyJYQ7kNvgEJgiDb&_nc_oc=AdlvhttwA6Ofj1Qj2TscBi-iKjpFJ7uP2oNutTuHanSiPkSVwWBDEKe-ahoO7sqtl1Q&_nc_zt=24&_nc_ht=scontent-jnb2-1.xx&_nc_gid=fBCzbqCPJ7PR6VmRZVijFA&oh=00_AYGQMbGgDY6I6QAgJbP1u5YZWkYacT-S0bd441ziz-1_KQ&oe=67E8BDB9" alt="Logo">
             </div>
             <h1>EDIGITAL SOLUTIONS</h1>
             <h2>Promo Posters | Logo Design | Express Video | Custom Website Design</h2>
