--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDigital Solutions</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="512x512" href="https://i.pinimg.com/236x/f4/6a/67/f46a67e650888ab69335de4a06db8d8b.jpg">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://edigitalsolutions.vercel.app/logo.jpg">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
@@ -99,7 +99,7 @@
         header {
             position: relative;
             text-align: center;
-            background: url('https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/481067275_1354155989040251_818686325612014988_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=108&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=5gI8OeVR4TgQ7kNvgHnT4K7&_nc_oc=Adn0AuIE5X4r6OOWz0vse4e8jGK9K-VFyDXloSF4o4ATcWGvn1C3fkSxVldMKEqYKpg&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=fBCzbqCPJ7PR6VmRZVijFA&oh=00_AYFKGCzBEz7nbYJruzFFqqtiKi46KpcW-RIkLtSP_zPdvQ&oe=67E8B8DE') no-repeat center center/cover;
+            background: url('https://edigitalsolutions.vercel.app/bg.jpg') no-repeat center center/cover;
             background-size: cover;
             height: 100vh;
             color: #fff;
@@ -514,7 +514,7 @@
     <header id="header">
         <div class="content">
             <div class="logo-placeholder">
-                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-1/472727970_122113300658635292_7853373447575386205_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=103&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=BMvVVatGyJYQ7kNvgEJgiDb&_nc_oc=AdlvhttwA6Ofj1Qj2TscBi-iKjpFJ7uP2oNutTuHanSiPkSVwWBDEKe-ahoO7sqtl1Q&_nc_zt=24&_nc_ht=scontent-jnb2-1.xx&_nc_gid=fBCzbqCPJ7PR6VmRZVijFA&oh=00_AYGQMbGgDY6I6QAgJbP1u5YZWkYacT-S0bd441ziz-1_KQ&oe=67E8BDB9" alt="Logo">
+                <img src="https://edigitalsolutions.vercel.app/logo.jpg" alt="Logo">
             </div>
             <h1>EDIGITAL SOLUTIONS</h1>
             <h2>Promo Posters | Logo Design | Express Video | Custom Website Design</h2>
